Replace method `newInstance()` that is deprecated in JDK9