@@ -34,11 +34,13 @@ public class PythonPluginManagerFactory {
                + ".PythonPluginManager"
             );
             final IPythonPluginManager mgr =
-               (IPythonPluginManager) mgrClass.newInstance();
+               (IPythonPluginManager) mgrClass.getDeclaredConstructor().newInstance();
             logger.info("Enabled support for Python plugins.");
             return mgr;
-        } catch(ClassNotFoundException | InstantiationException
-                | IllegalAccessException | NoClassDefFoundError e) {
+        } catch(
+            ClassNotFoundException | InstantiationException | IllegalAccessException
+            | NoClassDefFoundError | NoSuchMethodException | InvocationTargetException e
+        ) {
             System.out.println(e);
             e.printStackTrace();
             return null;
